# alo-chat

./: .env.example  .gitignore  CHANGELOG.md  DEPENDENCIES.md  README.md  index.html  package-lock.json  package.json
.github/: CHANGELOG_TEMPLATE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: release.yml
server/: .dockerignore  .env.example  Dockerfile  README.md  build-and-save.bat  default_users.json.example  deploy.sh  docker-compose.yml  main.py  requirements.txt
server/app/: config.py  database.py  seed.py
server/app/models/: __init__.py  conversation.py  friendship.py  message.py  user.py
server/app/routes/: __init__.py  auth.py  conversations.py  files.py  friends.py  users.py
server/app/services/: __init__.py  auth_service.py  user_helper.py
server/app/websocket/: __init__.py  manager.py
server/docs/: API_REFERENCE.md  DATABASE_SCHEMA.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: .gitkeep
src/components/Chat/: AvatarUpload.tsx  ChatHeader.tsx  ChatInput.tsx  ChatListSidebar.tsx  ConfirmModal.tsx  ContactListSidebar.tsx  ContextMenu.tsx  ImageViewer.tsx  MessageList.tsx  NavigationSidebar.tsx  TypingIndicator.tsx
src/pages/: .gitkeep  Chat.tsx  Login.tsx  NotificationPopup.tsx  Register.tsx
src/services/: api.ts  index.ts  socket.ts  tauri.ts
src/stores/: authStore.ts  chatStore.ts  friendStore.ts  index.ts  notificationStore.ts  socketStore.ts
src/types/: index.ts
(+1 files in other folders)
