[package]
name = "alo-chat"
version = "0.2.1"
description = "Ứng dụng nhắn tin công việc - Alo Chat"
authors = ["Nguyễn Ngọc Phú Tỷ"]
license = "MIT"
repository = "https://github.com/tynnp/alo-chat"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-websocket = "2.4.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
